@@ -7,6 +7,7 @@
 * Added ToutBox.fr (account only).
 * Made small changes to the ToutBox.fr plugin.
 * Updated SendSpace.com (plugin re-written from scratch).
+* Fixed SendSpace.com (upload logic).
 
 ==== v 3.4.0 ====
 * Updated Uploaded.net (now generates descriptive links instead of the short ul.to links).
